fixed overflow problem on iphones, mobile nav li's don't stay selected

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -200,12 +200,11 @@ ul li:hover{
 	font-weight:600;
 } 
 
-.linkContainer:hover{
+.linkContainer:hover {
 	opacity: .70;
 }
 @media (max-width: 767px) {
-
-	.elieNav, .navbar-header{
+	.elieNav, .navbar-header {
 	height:50px;
 	margin-top: 0px
 }
@@ -214,21 +213,19 @@ ul li:hover{
   font-size: 60px;
   
 	}
-	.navbar-brand{
+	.navbar-brand {
 		font-size: 30px;
 	}
 	.welcomeDiv h1 {
-		margin-top: 25vh;
+		margin-top: 20vh;
 
 	font-size: 30px;
 	
 	}
 
 .welcomeDiv h2 {
-	font-size: 25px;
-	
+	font-size: 25px;	
 	}	
-
 
 	.brandHide {
 		visibility: visible;
@@ -237,6 +234,9 @@ ul li:hover{
 	.container-fluid {
 		background:white;
     border-bottom:1px solid #808080;
+	}
+	#music .contentContainer {
+    overflow-x: hidden;
 	}
 
 }
